@@ -10,6 +10,11 @@ Compatibility:
 - The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
   deprecated. Use the `SCOREP_USER_*` macros instead.
 
+Bugfixes:
+
+- The OpenMP detection now additionally checks for the `-fiopenmp` flag
+  used by Intel oneAPI.
+
 ------------------- Released version 8.1 -----------------------------
 
 Bugfixes:
